--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO DO PROJECT</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="welcome-page" class="page">
@@ -23,4 +23,6 @@
 
     <script src="script.js"></script>
 </body>
-</html
+</html>
+
+
