--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="welcome-page" class="page">
+    <div id="welcome-page" class="page active">
         <h1>Welcome to the TO-DO Project</h1>
         <button id="start-button">Let's Go</button>
     </div>
@@ -24,5 +24,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
